--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "firebase": "^9.23.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
